--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <span class="display-3">Resources</span>
       <div class="row mt-5 justify-content-around align-items-center">
         <div class="col">
-          <a href="/commands/npm.html" class="btn btn-outline-success">Npm Commands</a>
-          <a href="/commands/git.html" class="btn btn-outline-secondary">Git Commands</a>
-          <a href="/Bootstrap/index.html" class="btn btn-outline-primary">Boostrap</a>
-          <a href="/axios/index.html" class="btn btn-outline-info">Axios</a>
+          <a href="./commands/npm.html" class="btn btn-outline-success">Npm Commands</a>
+          <a href="./commands/git.html" class="btn btn-outline-secondary">Git Commands</a>
+          <a href="./Bootstrap/index.html" class="btn btn-outline-primary">Boostrap</a>
+          <a href="./axios/index.html" class="btn btn-outline-info">Axios</a>
         </div>
 
       </div>
