--- a/commands/git.html
+++ b/commands/git.html
@@ -12,10 +12,19 @@
   body {
     font-family: 'Muli', sans-serif;
   }
+
   .box {
     border: 20px dotted white;
     border-radius: 21px;
     background: #f5f5f5;
+  }
+  pre{
+     background-color:transparent;
+     border-radius: 10%;
+     color:#007bff;
+     border: 3px solid white;
+     padding: 0.5rem 0rem;
+     font-size: 1.08rem;
   }
 </style>
 
@@ -58,6 +67,15 @@
         <h5 class="mx-4 text-primary">git remote add origin https://github.com/user/repo.git</h5>
         <h4>Renaming Remote</h4>
         <h5 class="mx-4 text-primary">$ git remote rename current_name new_name</h5>
+        <h4>Specify a new remote upstream repository that will be synced with the fork.</h4>
+        <h5 class="mx-4 text-primary">$ git remote add upstream
+          https://github.com/ORIGINAL_OWNER/ORIGINAL_REPOSITORY.git</h5>
+          <h3>Syncing a fork</h3>
+          <pre>
+             $ git fetch upstream
+             $ git checkout master
+             > Switched to branch 'master'
+             $ git merge upstream/master          </pre>
         <h4>Verfify new remote</h4>
         <h5 class="mx-4 text-primary"> git remote -v</h5>
         <h4>Push content to remote Repository</h4>
