--- a/commands/git.html
+++ b/commands/git.html
@@ -18,13 +18,14 @@
     border-radius: 21px;
     background: #f5f5f5;
   }
-  pre{
-     background-color:transparent;
-     border-radius: 10%;
-     color:#007bff;
-     border: 3px solid white;
-     padding: 0.5rem 0rem;
-     font-size: 1.08rem;
+
+  pre {
+    background-color: transparent;
+    border-radius: 10%;
+    color: #007bff;
+    border: 3px solid white;
+    padding: 0.5rem 0rem;
+    font-size: 1.08rem;
   }
 </style>
 
@@ -70,8 +71,9 @@
         <h4>Specify a new remote upstream repository that will be synced with the fork.</h4>
         <h5 class="mx-4 text-primary">$ git remote add upstream
           https://github.com/ORIGINAL_OWNER/ORIGINAL_REPOSITORY.git</h5>
-          <h3>Syncing a fork</h3>
-          <pre>
+        <h3>Syncing a fork</h3>
+        <p>Sync a fork of a repository to keep it up-to-date with the upstream repository.</p>
+        <pre>
              $ git fetch upstream
              $ git checkout master
              > Switched to branch 'master'
